feat(accounting): add accounting module with ledger, journal, and reports
This commit introduces a comprehensive accounting module featuring:
- AccountingLedger component for managing financial entries
- AccountingJournal component for grouped transaction entries
- AccountingReports component for financial reporting
- NewEntryModal for creating accounting entries
- Integration with theme provider and styled components
- Enhanced date input styling for dark mode
- Improved sidebar and header components with theme toggle
- Added page transitions for smoother navigation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>2103 Creative ERP</title>
+    <title>2103 CREATIVE ERP</title>
     <meta name="description" content="Sistema ERP completo para indústria cerâmica" />
     <meta name="author" content="2103 Creative" />
 
